# mpiT

./: CMakeLists.txt  CMakeLists.txt.openmpi  LICENSE  README.lua  README.md  README.txt  init.lua  lua-mpi.h  mpiT.c  mpifuncs.c  mpit-1.0.0-0.rockspec  mpit-mvapich-1.rockspec  mpit-openmpi-1.rockspec  queue.lua  readspec.py  test.lua
BiCNN/: DivideConstant.lua  Normalize.lua  bicnn.lua  binary_mapWordIdx2WordStr  binary_mapWordStr2WordIdx  hostfiles  init.lua  optim-adadelta-single.lua  optim-adadelta.lua  optim-adagrad-single.lua  optim-adagrad.lua  optim-adam-single.lua  optim-adam.lua  optim-adamax-single.lua  optim-adamax.lua  optim-downpour.lua  optim-eamsgd.lua  optim-msgd.lua  optim-rmsprop-single.lua  optim-rmsprop.lua  pclient.lua  plaunch.lua  prepareData.lua  pserver.lua  ptest2.lua  utils.lua
asyncsgd/: claunch.lua  confusion.lua  dropout.lua  glaunch.lua  goot.lua  init.lua  mlaunch.lua  optim-downpour.lua  optim-msgd.lua  pclient.lua  plaunch.lua  plaunchc.lua  pserver.lua  ptest.lua  testreduceall.lua
specs/: abort.json  accumulate.json  add_error_class.json  add_error_code.json  add_error_string.json  allgather.json  allgatherv.json  alloc_mem.json  allreduce.json  alltoall.json  alltoallv.json  alltoallw.json  barrier.json  bcast.json  bsend.json  bsend_init.json  buffer_attach.json  buffer_detach.json  cancel.json  cart_coords.json  cart_create.json  cart_get.json  cart_map.json  cart_rank.json  cart_shift.json  cart_sub.json  cartdim_get.json  close_port.json  comm_accept.json  comm_call_errhandler.json  comm_compare.json  comm_connect.json  comm_create.json  comm_create_errhandler.json  (+236 more)
(+2 files in other folders)
